[package]
name = "embedded-cfu-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-io-async = "0.6.1"

binary_serde = "1.0.24"
defmt = { version = "0.3", optional = true }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
heapless = "0.8.0"
log = { version = "0.4.14", optional = true }

[features]
default = []
defmt = [
    "dep:defmt",
]
log = [
    "dep:log",
]