[package]
name = "embedded-cfu-protocol"
version = "0.2.0"
edition = "2021"

[dependencies]
embedded-io-async = "0.6.1"

defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }

[features]
default = []
defmt = [
    "dep:defmt",
]
log = [
    "dep:log",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
correctness = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
perf = "deny"
suspicious = "deny"
style = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
